# cmake-skeleton

./: .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md
cmake/: Application.cmake  CompileOptions.cmake  CompilerFlags.cmake
cmake/Modules/: FindGLM.cmake  FindSDL2_image.cmake
cmake/Win32_64_Specific/: FindSDL2.cmake
src/: CMakeLists.txt  fibonachi.cpp  fibonachi.h  main.cpp  test.cpp  test.h
tests/: CMakeLists.txt  SimpleBox.frag  SimpleBox.vert  TestMath.cpp
